--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Coastal Wind Creations</title>
-    <meta charset="utf8"
-    <link rel="stylesheet" href="./syltes.css"/>
+   <title>Coastal Wind Creations</title>
+   <meta charset="utf8">
+   <link rel="sylesheet"
+    href="style.css>"
+</head>
+
 <h1>Heading Test by Jess</h1>
     <ol>This is a Child</ol>
       <ul>This is a Second Child
@@ -13,11 +16,11 @@
       </ul>  
 <body>This Page is about my Art Work
 </body>
-<p>This is my first shot at adding colours in</p>
+<p>This is my first shot at <em>trying</em> to be adding colours in</p>
 <p>CSS will help to link a set of syles into our work</p>
     <h2>More about this Page</h2>
         <body/>Where I get my insp</head>
-        <p>My brother is my main source of inspo
+        <p>My brother is my <strong>main</strong> source of inspo
         </p>
         <p>Also colours and water
         </p>
