--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
    <title>Coastal Wind Creations</title>
-   <meta charset="utf8">
-   <link rel="sylesheet"
-    href="style.css>"
-</head>
-
-<h1>Heading Test by Jess</h1>
-    <ol>This is a Child</ol>
-      <ul>This is a Second Child
-        <li> Third Child</li>
-        <li>Forth Child</li>
-        <li>Fifth Child</li>
-      </ul>  
-<body>This Page is about my Art Work
-</body>
-<p>This is my first shot at <em>trying</em> to be adding colours in</p>
-<p>CSS will help to link a set of syles into our work</p>
-    <h2>More about this Page</h2>
-        <body/>Where I get my insp</head>
-        <p>My brother is my <strong>main</strong> source of inspo
-        </p>
-        <p>Also colours and water
-        </p>
-        <h1>Trying out Colours from this section onwards</h1>
-         <link rel="stylesheet" href="#styles.css"
-        <p>Test Phrase 1</p>
-<p>Text Phrase 2</p>
-<p>Test Phrase 3</p>
-<p>Test Phrase 4</p>
+   <meta charset="utf-8" />
+   <link rel="sylesheet" href="style.css" />
+  </head>
+  <body>
+    <header id="top">
+      <h1>Heading Test by Jess or Favorite Things on Emme's eg.</h1>
+  </header>
+  <main>
+    <section>
+      <h2>My Fave Meals</h2>
+      <p>Below is a list of some fave meals:</p>
+      <ol> 
+        <li>Seafood, flag this eg for discussion w/ES about how she has it linked</li>
+        <li>Shellfish</li>
+        <li>Salmon</li>
+      </ol>
+      </section>  
+      <h2>More Fave Stuff</h2>
+    <a
+    href="./images/dogimage.jpg"
