--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
    <title>Coastal Wind Creations</title>
    <meta charset="utf-8" />
-   <link rel="sylesheet" href="style.css" />
+   <link rel="sylesheet" 
+      href="style.css">
   </head>
   <body>
     <header id="top">
-      <h1>Heading Test by Jess or Favorite Things on Emme's eg.</h1>
+      <h1>Heading Test by Jess</h1>
   </header>
   <main>
     <section>
@@ -17,8 +18,41 @@
         <li>Seafood, flag this eg for discussion w/ES about how she has it linked</li>
         <li>Shellfish</li>
         <li>Salmon</li>
+    <section>
+      <img src="images/art-image.jpg"
+      alt="Photo of Art"/>
+    </section>
       </ol>
       </section>  
       <h2>More Fave Stuff</h2>
-    <a
-    href="./images/dogimage.jpg"
+  <p>Dogs are at the very top fave animal</p>
+  <ol>
+    <li>Rosie is Mini Aussie and King Charles</li>
+    <li>Buddy the Bishon</li>
+    <li>Roamie the Havanese</li>
+  </ol>
+    <section>
+      <img src="images/nextartimage.jpg"
+      alt="Photo of a Dog"/>
+    </section>
+  <ul>
+    <section>
+      <li>Additional Items</li>
+      <li>Extra Stuff</li>
+      <li>One Last Point</li>
+    </section>
+  </ul>
+
+  <p>An Additional section here will be for trying out some fonts and testing out colors that I need to add furtther practice with.</p>
+    <ul>
+      <li>This phrase will have the words blue for bold to practice with</li>
+    </ul>
+
+  </main>
+  <footer>
+    <p>Giaxixa for visiting</p>
+    <p>Check out my search site link here<a href="https://www.google.com"</a>
+    </p>
+  </footer>
+
+
