--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header id="top">
-      <h1>Heading Test by Jess</h1>
+      <h1> class="<title>"Big title</h1>
   </header>
   <main>
     <section>
@@ -47,12 +47,9 @@
     <ul>
       <li>This phrase will have the words blue for bold to practice with</li>
     </ul>
-
   </main>
   <footer>
     <p>Giaxixa for visiting</p>
     <p>Check out my search site link here<a href="https://www.google.com"</a>
     </p>
   </footer>
-
-
