--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
    <title>Coastal Wind Creations</title>
    <meta charset="utf-8" />
-   <link rel="sylesheet" 
-      href="style.css">
   </head>
   <body>
     <header id="top">
-      <h1> class="<title>"Big title</h1>
+      <h1><title>"Big title</h1>
   </header>
   <main>
     <section>
