--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
    <meta charset="utf-8" />
   </head>
   <body>
-    <header id="top">
-      <h1><title>"Big title</h1>
+      <h1><title>Big title</h1>
   </header>
   <main>
     <section>
